Fix link visible inside spoiler (#2215)
* hide links in spoiler

* prevent link click inside spoiler

--- a/src/index.scss
+++ b/src/index.scss
@@ -427,6 +427,12 @@ a {
     text-decoration: underline;
   }
 }
+
+[data-mx-spoiler][aria-pressed='true'] a {
+  color: transparent;
+  pointer-events: none;
+}
+
 b {
   font-weight: var(--fw-medium);
 }
